--- a/sass/style.sass
+++ b/sass/style.sass
@@ -21,7 +21,7 @@ body
 .container 
     padding-top: 43px
 .header
-    background: no-repeat url("/img/header-bg.png") 
+    background: center / 100% no-repeat url("/img/header-bg.png") 
     height: 100vh
 
 .navigation
