--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,8 +1,8 @@
 // === Variables ===
 // === Colors ===  
-$color-blue: #3ca6d3fb
+$color-blue: #11749e
 $color-white: #ffffff
-
+$color-light-blue: #2e85aa
 
 // === Fonts ===
 @font-face 
@@ -14,6 +14,9 @@ $color-white: #ffffff
 @font-face 
     font-family: Roboto
     src: url("/fonts/Roboto-Regular.ttf")
+@font-face 
+    font-family: Roboto-BoldCondensed
+    src: url("/fonts/Roboto-BoldCondensed.ttf")
 @font-face 
     font-family: Gotham-Medium
     src: url("/fonts/Gotham-medium.otf")
@@ -28,15 +31,27 @@ body
     background-color: #000
     margin: 0
     padding: 0
+section
+    padding: 0
+    margin: 0
 .container
     max-width: 1170px
     padding: 0
     padding-top: 43px
 .header
-    background: center / 100% no-repeat url("/img/header-bg.png") 
     height: 100vh
-
+.background
+    position: absolute
+    width: 100%
+    height: 100%
+    top: 0
+    left: 0
+    background: center / 100% fixed url("/img/header-bg.png") 
+    z-index: -1
+    filter: blur(5px)
+    overflow: hidden
 .navigation
+    
     display: flex
     justify-content: space-around
     align-items: center
@@ -44,6 +59,7 @@ body
     padding-left: 22px
     background-color: rgba(0, 0, 0, 0.322)
     & .logo
+        
         width: 50px
         height: 50px
         background-color: $color-white
@@ -146,9 +162,53 @@ body
         background-color: rgba(0,0,0,0)
         border: 1px solid $color-white
         border-radius: 50%
+        transition: .3s ease
+        &:focus
+            outline: 0
+        &:hover
+            background-color: $color-white
+            & i
+                color: #000000
         & i 
             color: $color-white
-            
+.about
+    min-height: 738px
+    height: 100vh
+    background-color: $color-blue  
+    &-heading
+        display: flex
+        position: relative
+        flex-direction: column
+        justify-content: center
+        align-items: center
+        color: $color-white
+        text-transform: uppercase
+        text-align: center
+        &__title
+            padding-top: 172px
+            padding-bottom: 108px
+            margin: 0
+            font-size: 37px
+            font-family: Gotham-Medium
+        &__symbol
+            margin: 0
+            transform: translateY(50%)
+            font-family: Roboto
+            font-weight: 900
+            opacity: 0.3
+            font-size: 247px
+    &-cards
+        text-align: center
+        font-family: Gotham-Medium
+        color: $color-white
+        &__card-icon
+            margin: 0 auto
+            background-color: $color-light-blue
+            width: 133px
+            height: 133px
+            overflow: 
+            border-radius: 50%
+
 .links
     display: none
 
